# recipe

recipe/: pyproject.toml
recipe/recipe_site/authentication/: backends.py  models.py  renders.py  serializers.py  urls.py  views.py
recipe/recipe_site/authentication/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py
recipe/recipe_site/recipe_site/: exceptions.py  settings.py  urls.py
