[tool.poetry]
name = "recipe"
version = "0.1.0"
description = ""
authors = ["Illia Davydiuk <98216327+Kargozaur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
